examples/test/testpolicy16784.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16784
  namespace: namespace53
spec:
  podSelector:
    matchLabels:
      key18: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value10
      podSelector:
        matchLabels:
          key48: value36
          key43: value49
          key46: value40
